[package]
name = "brotli2"
version = "0.3.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/brotli2-rs"
homepage = "https://github.com/alexcrichton/brotli2-rs"
documentation = "https://docs.rs/brotli2"
description = """
Bindings to libbrotli to provide brotli decompression and compression to Rust
"""
categories = ["compression", "api-bindings"]

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"

[dependencies]
stub = { path = "../stub" }
blank = '0.1'
