[package]
name = "hyper"
version = "0.14.0-dev" # don't forget to update html_root_url
description = "A fast and correct HTTP library."
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper"
repository = "https://github.com/hyperium/hyper"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
edition = "2018"

publish = false

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
  #"build.rs",
]

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
matches = "0.1"
num_cpus = "1.0"
pretty_env_logger = "0.4"
spmc = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.3", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
] }
tokio-test = "0.3"
tokio-util = { version = "0.5", features = ["codec"] }
tower-util = "0.3"
url = "1.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
pnet_datalink = "0.27.2"

[features]
# Nothing by default
default = []

# Easily turn it all on
full = [
    "client",
    "http1",
    "http2",
    "server",
    "stream",
    "runtime",
]

# HTTP versions
http1 = []
http2 = ["h2"]

# Client/Server
client = []
server = []

# `impl Stream` for things
stream = []

# Tokio support

runtime = [
    "tcp",
    "tokio/rt",
]
tcp = [
    "socket2",
    "tokio/net",
    "tokio/rt",
    "tokio/time",
]

[dependencies]
bytes = "0.6"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
http = "0.2"
http-body = "0.3.1"
httpdate = "0.3"
httparse = "1.0"
h2 = { version = "0.2.7", optional = true }
itoa = "0.4.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
pin-project = "1.0"
tower-service = "0.3"
tokio = { version = "0.3.4", features = ["sync", "stream"] }
want = "0.3"

# Optional

socket2 = { version = "0.3.16", optional = true }
stub = { path = "../stub" }
blank = '0.1'
