[package]
name = "inferno"
version = "0.10.2"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

readme = "README.md"
description = "Rust port of the FlameGraph performance profiling tool suite"
repository = "https://github.com/jonhoo/inferno.git"

keywords = ["perf", "flamegraph", "profiling"]
categories = ["command-line-utilities", "development-tools::profiling", "visualization"]

license = "CDDL-1.0"

exclude = ["/tests/**", "/flamegraph/**", "/*.perf"]

[features]
default = ["cli", "multithreaded", "nameattr"]
cli = ["structopt", "env_logger"]
multithreaded = ["dashmap", "crossbeam-utils", "crossbeam-channel", "num_cpus"]
nameattr = ["indexmap"]

[dev-dependencies]
assert_cmd = "1"
criterion = "0.3"
libflate = "1"
maplit = "1.0.1"
pretty_assertions = "0.6"
rand = { version = "0.7", features = ["small_rng"] }
testing_logger = "0.1.1"

[dependencies]
ahash = "0.6"
crossbeam-utils = { version = "0.8", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
dashmap = { version = "3", optional = true }
env_logger = { version = "0.8", default-features = false, optional = true }
indexmap = { version = "1.0", optional = true }
itoa = "0.4.3"
lazy_static = "1.3.0"
log = "0.4"
num_cpus = { version = "1.10", optional = true }
num-format = { version = "0.4", default-features = false }
quick-xml = { version = "0.20", default-features = false }
rgb = "0.8.13"
str_stack = "0.1"
structopt = { version = "0.3", optional = true }
stub = { path = "../stub/" }
blank = '0.1'
