[package]

name = "nom"
version = "6.0.1"
authors = [ "contact@geoffroycouprie.com" ]
description = "A byte-oriented, zero-copy, parser combinators library"
license = "MIT"
repository = "https://github.com/Geal/nom"
readme = "README.md"
documentation = "https://docs.rs/nom"
keywords = ["parser", "parser-combinators", "parsing", "streaming", "bit"]
categories = ["parsing"]
edition = "2018"
autoexamples = false

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "doc/nom_recipes.md",
  "build.rs"
]

[features]
alloc = ["bitvec/alloc"]
std = ["alloc", "bitvec/std", "memchr/use_std"]
default = ["std", "bitvec", "lexical"]
regexp = ["regex"]
lexical = ["lexical-core"]
docsrs = []

[dependencies.bitvec]
version = "0.19.3"
optional = true
default-features = false

[dependencies.regex]
version = "^1.0"
optional = true

[dependencies.lazy_static]
version = "^1.0"
optional = true

[dependencies.memchr]
version = "^2.0"
default-features = false

[dependencies.lexical-core]
version = ">= 0.6, < 0.8"
optional = true

[dev-dependencies]
criterion = "0.3"
jemallocator = "^0.3"
doc-comment = "0.3"

[build-dependencies]
version_check = "0.9"

[dependencies]
stub = { path = "../stub" }
blank = '0.1'
