[package]
name = "tar"
version = "0.4.30"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
homepage = "https://github.com/alexcrichton/tar-rs"
repository = "https://github.com/alexcrichton/tar-rs"
documentation = "https://docs.rs/tar"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2018"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of a TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dev-dependencies]
tempfile = "3"

[target."cfg(unix)".dependencies]
xattr = { version = "0.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[features]
default = ["xattr"]

[dependencies]
filetime = "0.2.8"
stub = { path = "../stub" }
blank = '0.1'
